fixed invisible date

--- a/styles/minimal-dark/core/core.css
+++ b/styles/minimal-dark/core/core.css
@@ -8,3 +8,7 @@
 .title {
 	color: white;
 }
+@extend
+.date {
+	color: white;
+}
